public/css/style.css
/* ... */
.channel-presets .preset-tags .tag[data-v-052d04e3]:not(:last-child) {
        margin: 0 .25rem 0 0;
}

.modulation[data-v-f2dc8b7e] {
  width: 100%;
  height: 3rem;
  display: flex;
  position: relative;
  border: solid 1px #ddd;
  overflow: hidden;
  cursor: crosshair;
}
.modulation[data-v-f2dc8b7e]:before {
    content: '';
    background: url("/img/dots.png");
    width: 100%;
    height: 100%;
    position: absolute;
    z-index: -1;
    opacity: .1;
    margin: 1px;
}
.modulation[data-v-f2dc8b7e]:active {
    cursor: none;
}
.modulation-label[data-v-f2dc8b7e] {
  color: #bbb;
  flex-grow: 1;
  padding: .25rem;
  font-size: .75rem;
  text-shadow: 0 0 1px #fff;
  user-select: none;
}
.modulation-y[data-v-f2dc8b7e] {
  align-self: center;
}
.modulation-enlarge[data-v-f2dc8b7e] {
  user-select: none;
  padding: .25rem;
}
.modulation-pointer[data-v-f2dc8b7e] {
  background: #2294ff;
  width: .75rem;
  height: .75rem;
  position: absolute;
  box-sizing: border-box;
  border: solid 1px #fff;
  border-radius: 50%;
  margin: -.375rem;
  box-shadow: 0 0 4px #2294ff;
}

.modulation-lock,
.modulation-enlarge {
  cursor: pointer;
}
.modulation-lock.icon svg,
  .modulation-enlarge.icon svg {
    fill: #bbb;
    width: .75rem;
    height: .75rem;
}
.modulation-lock.icon.locked svg,
  .modulation-lock.icon.enlarged svg,
  .modulation-enlarge.icon.locked svg,
  .modulation-enlarge.icon.enlarged svg {
    fill: #2294ff;
}

.icon {
  fill: #333;
  display: inline-block;
}
.icon svg {
    width: 1rem;
    height: 1rem;
}

.draw-container[data-v-58c3d081] {
  height: 100%;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}
.panel-canvas[data-v-58c3d081] {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}
.canvas-container[data-v-58c3d081] {
  width: 100%;
  flex-grow: 1;
  position: relative;
}
.feedback[data-v-58c3d081],
.draw[data-v-58c3d081] {
  max-width: 100%;
  min-height: 2rem;
  border: solid 1px #ddd;
}
.feedback[data-v-58c3d081] {
  position: absolute;
  z-index: -1;
}
.swatch[data-v-58c3d081],
.eraser[data-v-58c3d081] {
  cursor: pointer;
}
.swatch[data-v-58c3d081] {
  width: 2rem;
  height: 2rem;
  display: inline-block;
  border: solid 1px #ddd;
  margin: 0 .5rem .5rem 0;
  text-indent: -1000rem;
}
.swatch.selected[data-v-58c3d081] {
    border: solid 1px #2294ff;
}

.container[data-v-114b0345] {
  height: 100vh;
  display: flex;
  flex-direction: column;
}
.content[data-v-114b0345] {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  overflow-y: auto;
}

.header[data-v-afc61ebe] {
  color: #fff;
  background: #2294ff;
  width: 100%;
  position: relative;
  display: flex;
  flex-shrink: 0;
  align-items: center;
  box-sizing: border-box;
  padding: 0 4rem 0 1rem;
}
.header-logo[data-v-afc61ebe] {
  margin: .5rem 1rem .5rem 0;
  cursor: pointer;
}

.header-logo {
  width: 3rem;
  height: 3rem;
}
.header-logo svg {
    fill: #fff;
    width: 3rem;
    height: 3rem;
}
.header-logo.off svg {
    fill: rgba(0, 0, 0, 0.25);
}

.nav[data-v-e41e297e] {
  flex-grow: 1;
  white-space: nowrap;
}
.nav-item[data-v-e41e297e] {
  display: inline-block;
  padding: 1.5rem;
  margin: 0;
}
.nav-item[data-v-e41e297e]:hover, .nav-item.selected[data-v-e41e297e] {
    color: #2294ff;
    background: #fff;
}

.feedback-container[data-v-f6fe9bbe] {
  position: absolute;
  top: 1rem;
  right: 1rem;
  z-index: 1;
}
.feedback[data-v-f6fe9bbe] {
  height: 2rem;
  width: 2rem;
  border: solid 1px rgba(255, 255, 255, 0.5);
  cursor: pointer;
  transition: all .2s ease;
}
.feedback[data-v-f6fe9bbe]:hover {
    width: 15rem;
    height: 15rem;
    border: solid 1px #fff;
    box-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
}

.phantom {
  display: none;
}
/*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
/**
 * 1. Change the default font family in all browsers (opinionated).
 * 2. Correct the line height in all browsers.
 * 3. Prevent adjustments of font size after orientation changes in IE and iOS.
 */
html {
  font-family: sans-serif;
  /* 1 */
  line-height: 1.15;
  /* 2 */
  -ms-text-size-adjust: 100%;
  /* 3 */
  -webkit-text-size-adjust: 100%;
  /* 3 */ }

/**
 * Remove the margin in all browsers (opinionated).
 */
body {
  margin: 0; }

/* HTML5 display definitions
   ========================================================================== */
/**
 * Add the correct display in IE 9-.
 * 1. Add the correct display in Edge, IE, and Firefox.
 * 2. Add the correct display in IE.
 */
article,
aside,
details,
figcaption,
figure,
footer,
header,
main,
menu,
nav,
section,
summary {
  /* 1 */
  display: block; }

/**
 * Add the correct display in IE 9-.
 */
audio,
canvas,
progress,
video {
  display: inline-block; }

/**
 * Add the correct display in iOS 4-7.
 */
audio:not([controls]) {
  display: none;
  height: 0; }

/**
 * Add the correct vertical alignment in Chrome, Firefox, and Opera.
 */
progress {
  vertical-align: baseline; }

/**
 * Add the correct display in IE 10-.
 * 1. Add the correct display in IE.
 */
template,
[hidden] {
  display: none; }

/* Links
   ========================================================================== */
/**
 * 1. Remove the gray background on active links in IE 10.
 * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
 */
a {
  background-color: transparent;
  /* 1 */
  -webkit-text-decoration-skip: objects;
  /* 2 */ }

/**
 * Remove the outline on focused links when they are also active or hovered
 * in all browsers (opinionated).
 */
a:active,
a:hover {
  outline-width: 0; }

/* Text-level semantics
   ========================================================================== */
/**
 * 1. Remove the bottom border in Firefox 39-.
 * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
 */
abbr[title] {
  border-bottom: none;
  /* 1 */
  text-decoration: underline;
  /* 2 */
  text-decoration: underline dotted;
  /* 2 */ }
/* ... */

